--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "element-plus": "^2.2.32",
     "js-cookie": "^2.2.1",
     "jsencrypt": "^3.0.0-rc.1",
+    "leaflet": "^1.9.3",
+    "leaflet-draw": "^1.0.4",
     "path-browserify": "^1.0.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
