--- a/package.json
+++ b/package.json
@@ -13,33 +13,39 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
-    "axios": "^1.3.4",
-    "element-plus": "^2.2.32",
+    "axios": "^1.6.8",
+    "echarts": "^5.5.0",
+    "element-plus": "^2.6.1",
+    "lodash-es": "^4.17.21",
     "js-cookie": "^2.2.1",
     "jsencrypt": "^3.0.0-rc.1",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
     "path-browserify": "^1.0.1",
-    "pinia": "^2.0.28",
-    "vue": "^3.2.45",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
     "vue-router": "^4.1.6",
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^10.9.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.58.3",
-    "typescript": "~4.7.4",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
+    "typescript": "^5.4.2",
+    "vite": "^5.2.7",
+    "vite-plugin-mock-dev-server": "^1.4.7",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue-tsc": "^2.0.6",
+    "unplugin-auto-import": "^0.17.5"
   }
 }
